--- a/package.json
+++ b/package.json
@@ -1,13 +1,59 @@
 {
   "name": "plaud-tm",
-  "version": "0.0.0",
-  "description": "Node launcher for the plaud-timestamp Rust CLI",
+  "version": "1.0.0",
+  "description": "CLI tool for managing and processing timestamped Plaud transcript files",
+  "type": "module",
   "bin": {
-    "plaud-tm": "./index.js"
+    "plaud-tm": "./dist/cli.js"
+  },
+  "scripts": {
+    "build": "tsc && bun scripts/make-executable.js",
+    "dev": "bun --bun src/cli.tsx",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "typecheck": "tsc --noEmit",
+    "lint": "eslint src --ext .ts,.tsx"
+  },
+  "keywords": [
+    "plaud",
+    "transcript",
+    "timestamp",
+    "cli",
+    "bun",
+    "ink",
+    "typescript"
+  ],
+  "author": "",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vultuk/plaud-tm.git"
+  },
+  "bugs": {
+    "url": "https://github.com/vultuk/plaud-tm/issues"
+  },
+  "homepage": "https://github.com/vultuk/plaud-tm#readme",
+  "engines": {
+    "bun": ">=1.0.0"
   },
   "files": [
-    "bin",
-    "index.js"
+    "dist"
   ],
-  "license": "UNLICENSED"
+  "dependencies": {
+    "date-fns": "^3.0.0",
+    "glob": "^10.3.10",
+    "ink": "^4.4.1",
+    "ink-spinner": "^5.0.0",
+    "meow": "^13.1.0",
+    "react": "^18.2.0"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.3.3",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3"
+  }
 }
